Kustomize/overlays/test/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp
  labels:
    homework: frontapp
    training: block4
spec:
  rules:
  - host: other.cubix.localhost
    http:
      paths:
      - path: /frontapp
        pathType: Prefix
        backend:
          service:
            name: frontapp
            port:
              number: 8080
